Implement nursing intake feedback changes
